Etapa 2/Compilador minijava - etapa 2/bin/tests/tests sintácticos/invalidos/test4.java
/*
Test4
Objetivo: Detectar un error en la declaracion de un constructor.
Falta el bloque en el constructor.

*/

class UnaClase extends Hola {
	varinst TipoVariable n;
	
	UnaClase()
	
}